[tool.poetry]
name = "sort-algo"
version = "0.1.0"
description = ""
authors = ["Oskar Korczak <oskar.korczak@protonmail.com>"]
readme = "README.md"
packages = [{include = "sort_algo"}]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.1"
hypothesis = "^6.102.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
